# codex-session-compress

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
docs/: codex-context-compaction-analysis.zh.md  semantic-checkpoint-compression-strategy.zh.md  subagent-session-cleanup.zh.md
references/: rollout-format.md  troubleshooting.md
scripts/: cleanup_compression_backups.py  cleanup_session_by_id.py  compress_session_by_id.py  confirm_session_with_codex_cli.py  list_rollouts.py  repair_rollout.py  restore_cleanup_manifest.py  verify_rollout.py
tests/: test_synthetic_rollout.py
