[project]
name = "codex-session-compress"
version = "1.8.18"
description = "Portable skill and stdlib scripts for listing, compressing, and cleaning local Codex session rollout JSONL files."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "codex-session-compress contributors" }
]
keywords = ["codex", "skill", "jsonl", "session", "rollout", "compression"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/chenjh16/codex-session-compress"
Repository = "https://github.com/chenjh16/codex-session-compress.git"

[tool.codex-session-compress]
skill = "SKILL.md"
scripts = "scripts"
